apps/storage/syncthing/overlays/storage/resources/external-dns.sops.yaml
apiVersion: v1
kind: Service
metadata:
    name: authentik-extname
    annotations:
        external-dns.alpha.kubernetes.io/hostname: ENC[AES256_GCM,data:cnX5c80WDtvBchW4FBdQixlJ8tEGPlq8tLjEtDk=,iv:DsFUo5I9lEmT8V4hF1HOz6Q1Sp/RKi2LSEtmmbK+rhU=,tag:riON+U7YGUC8CQGcJp+P3A==,type:str]
        external-dns.alpha.kubernetes.io/ttl: "300"
spec:
    type: ExternalName
    externalName: ENC[AES256_GCM,data:h7LSv1tRUdv1tm8EEhP7RGgB/aNWerisJBTXRGU=,iv:ols8n+uYbmTVWUpMYBdgSQDfgyMVngme0bXPVbPOHuM=,tag:CRcdhTj5CqTibUTG9VRR6Q==,type:str]
    sessionAffinity: None
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1deg9tqt7jtddnqme6nvcl72czns80z0n25u8k9pw5830dn4arsks5pua4h
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBtWVRYSG1ObUpUbi9LZmdi
[...]
            L02tXFQ3m5OVwmyFOlNhRgvjArM6CNgpfs/go22ulM+g5y74fVCKZA==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-06-20T14:22:21Z"
    mac: ENC[AES256_GCM,data:+l6YXNnp6kJdz1gmYY6LsxUDfwxbnBErzl7wm9fqli6sxIKfEit/pt5DFDGmUIeilvCKtTEQhf2PqZD/QmyX348eb/sBTjjT/83Ve70o5zHxhdcSQtwHfhkrxZ5iArJo6Xu/BBhdPmPwWjBGeA5aLT6pAIBpw/Gr5uJNxdRndso=,iv:eO/aBgIEFuQXlmB+Io9lAqHNF63otfqSoaRt88Rou9E=,tag:ded0osaZn/ktpR6eG6+sAw==,type:str]
    pgp:
        - created_at: "2024-06-20T14:22:21Z"
          enc: |-
            -----BEGIN PGP MESSAGE-----

            hQIMA0R6oz1GmNjVAQ//ZMSh+NltRLpndc7JDueqSHq32WIhjfSKXBQocZXAAoK2
[...]
            =1FU2
            -----END PGP MESSAGE-----
          fp: 6D3FE55384B558E06A1BA364586EFA784A32C981
    encrypted_regex: ^(externalName|external-dns.alpha.kubernetes.io/hostname|sans|main|match|external-dns.alpha.kubernetes.io/target|dnsNames|commonName|data|stringData|dnsNames|email|accessKeyID|region|hostedZoneID|role|dnsZones)$
    version: 3.8.1
