apps/storage/syncthing/overlays/storage/resources/service-proxy.yaml
kind: Service
apiVersion: v1
metadata:
  name: syncthing-discovery-proxy
  annotations:
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
    argocd.argoproj.io/sync-wave: "10"
  labels:
    app: syncthing-discovery
spec:
  externalName: 192.168.40.193
  ports:
  - name: discovery
    protocol: TCP
    port: 21027
    targetPort: 21027
  type: ExternalName
  selector:
    app.kubernetes.io/instance: traefik
    app.kubernetes.io/name: traefik
