apps/storage/syncthing/overlays/storage/resources/ingressroute.sops.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
    annotations:
        argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
        argocd.argoproj.io/compare-options: IgnoreExtraneous
        argocd.argoproj.io/sync-wave: "10"
        cert-manager.io/cluster-issuer: route53-letsencrypt-production
        external-dns.alpha.kubernetes.io/target: ENC[AES256_GCM,data:Jn5I/mvzQhyjC4Y141pkb4U1AaHSqtCrleo=,iv:eYs7s3kWnKfCEDduJhNifMqiNRRsuCCs8cAtxp9XCFo=,tag:+TN+zCE7bmKh1WwYiEHlAg==,type:str]
        kubernetes.io/ingress.class: traefik-external
    labels:
        app.kubernetes.io/name: syncthing-web
    name: syncthing
    namespace: storage
spec:
    entryPoints:
        - websecure
    routes:
        - kind: Rule
          match: ENC[AES256_GCM,data:Pg7owD08H8q07+jbQgWqoEDew53NicLwRBtxD6+gdVEUlpM/2GZbxbs41Dg=,iv:/OvUpsvVDg0/xdPRGvCJpzd30kNekCPKQgFnIaFoWZY=,tag:SwghMkxJbUy56dZwpHp2LQ==,type:str]
          middlewares:
            - name: chain-traefik-dashboard
              namespace: traefik
          services:
            - kind: TraefikService
              name: syncthing-web
              port: 8384
    tls:
        domains:
            - main: ENC[AES256_GCM,data:O6WrQzVKhF5/sampiUaj+Ezgvu3TDOJKZEQ=,iv:aIaBAmz/8Z96YxSXTgACqLb/3WseWyl7DRaWxE0hzcQ=,tag:ImVPWNbGLlArx/a80Uk1Ug==,type:str]
              sans:
                - ENC[AES256_GCM,data:DEYVXp517WlnQQeWLcNcZlTvguAujna/uMSV,iv:6RaPfzONYOM0BMWDAK9L3OAgvMILNj5LWgTukVPm4w8=,tag:vaUWj8qgbM3NaLfI2HO6uA==,type:str]
        options:
            name: tls-ver13
            namespace: traefik
        secretName: syncthing-web-cf-production
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1deg9tqt7jtddnqme6nvcl72czns80z0n25u8k9pw5830dn4arsks5pua4h
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSByRmc2MFluSUNUVFQ5YmJB
[...]
            sQ5dtOn2tmvu2KY0kgsIg5tML0P/ia+ZhCcSV68KMX+zJ8q55hQ0hg==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-06-20T14:22:02Z"
    mac: ENC[AES256_GCM,data:r3jqKXNVfBlmWIbbEqaAFIzqJZirwInJ5rTZVPO6zV0lCNbmKViGnznZnT6zuN5RhXTnmWf89RX/JoX4MdQ8epxNd400v1p8gewDeR0BwMPPVi2dniuoMIpTh1ZTUGTqUhX95GOp9jyL/5FESbB2ZL16aIE3WIOA/4K0jsTB8N0=,iv:SdweVWBDGmpq1HQyuT+bpSlBxw/HqqhvvOLbDbHIhRg=,tag:jgFMeXalA76oagrPT6nLdw==,type:str]
    pgp:
        - created_at: "2024-06-20T14:22:02Z"
          enc: |-
            -----BEGIN PGP MESSAGE-----

            hQIMA0R6oz1GmNjVAQ/+LJ+GCL7MM7uPi2ECcAEuBVvTgbD0iERJoBriYpRDI37c
[...]
            =rFEf
            -----END PGP MESSAGE-----
          fp: 6D3FE55384B558E06A1BA364586EFA784A32C981
    encrypted_regex: ^(externalName|external-dns.alpha.kubernetes.io/hostname|sans|main|match|external-dns.alpha.kubernetes.io/target|dnsNames|commonName|data|stringData|dnsNames|email|accessKeyID|region|hostedZoneID|role|dnsZones)$
    version: 3.8.1
